manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-application
  labels:
    app: poc-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc-application
  template:
    metadata:
      labels:
        app: poc-application
    spec:
      containers:
        - name: poc-application
          image: 595981035245.dkr.ecr.ap-south-1.amazonaws.com/atul-devops-lab/poc-application:cbe2b15378f90326c4f6492eb50ef86e8f4925b7
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
