manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-application
  namespace: poc-application
spec:
  selector:
    app: poc-application
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
